AC_INIT([stomp], [0.1], [evgeni_dobrev@developer.bg], [stomp],
        [https://github.com/evgenido/stomp])
AM_INIT_AUTOMAKE([1.11 foreign subdir-objects])
AM_SILENT_RULES([yes])

LT_INIT()

AC_SUBST([STOMP_SO_VERSION], [0:0:0])
AC_SUBST([STOMP_API_VERSION], [0.0])

AC_CONFIG_FILES([Makefile stomp.pc:stomp.pc.in])
AC_OUTPUT
